docs/versioned_docs/version-0.2.5/roadmap.md
---
sidebar_position: 7
---

# Roadmap

Murali's direction is an AI-first Rust animation engine for deterministic technical storytelling.
It should visualize recorded model and system state rather than become an inference framework, and
it should preserve explicit author control while making common educational compositions easier to
build.

This page contains future work only. Released capabilities are documented in the guides and
release notes.

## Python Coherence And 0.3.0

Murali `0.3.0` is planned as the first coherent Python-first release line. The goal is for
`murali-engine` to feel like a complete Python library, with `murali-kit` examples running against
it cleanly.

- Freeze the intended Python API shape for scenes, objects, timelines, layout, preview, export, and
  examples.
- Inventory Rust examples and engine features against the currently exposed Python surface.
- Keep `0.2.x` releases additive and compatibility-focused; reserve breaking Python API cleanup for
  `0.3.0`.
- Make the Python binding architecture predictable, with consistent constructors, validation,
  return values, and module registration.
- Expose missing APIs when they are needed by real examples, documentation, or `murali-kit`.
- Classify the existing Rust collection tree before `0.3.0`: keep core building blocks in the
  engine, move opinionated compositions to `murali-kit`, and leave unstable surfaces Rust-only until
  they are ready.
- Move Python-facing theme selection to `murali-kit`; keep engine styling explicit through colors,
  backgrounds, fonts, materials, and conservative renderer defaults.
- Port examples in stages: basic shapes, text, timelines, layout, axes, tables, 3D, scene views,
  and advanced demos.
- Use the examples as the backbone for Python documentation.
- Add release checks for Python import, Python examples, `murali-kit` examples, Maturin wheel
  builds, and normal Rust tests.

## Reliability And Quality Gates

- Cross-platform and headless `wgpu` runtime coverage.
- Golden-image tests for core rendering and representative AI scenes.
- Property tests for mesh limits, transformed bounds, capture ordering, and invalid input.
- Structured validation across remaining token, attention, label, color, dimension, and route APIs.
- A warning-free library build, broader strict Clippy, dependency auditing, and validated docs
  samples.

## AI Teaching Semantics

- A domain RFC defining snapshots, tokens, operations, semantic IDs, trace events, and data
  ownership.
- General image and image-grid compositions for datasets, feature maps, and multimodal lessons.
- Residual-stream, MLP, and mixture-of-experts semantics.
- An autoregressive-generation composition connecting successive next-token distributions,
  selected tokens, appended context, and the repeat-until-stop streaming cycle.
- Computation graphs with deterministic forward and reverse-mode playback.
- Parameter, gradient, loss, optimizer, activation, feature-map, and attribution views.
- A complete semantic backpropagation lesson spanning equations, tensors, networks, and plots.
- Recorded agent and RAG events for retrieval, tools, memory, retries, branches, and handoffs.
- Aggregation, sampling, clipping, and virtualization for long sequences and dense models.

## Narration And Production

- First-class narration segments, audio tracks, cue bookmarks, captions, and subtitles.
- Cue-aligned clips and machine-readable render manifests.
- Reusable teaching layouts for title, equation, diagram, comparison, and recap shots.
- A deterministic author-render-inspect-revise workflow using screenshots and scene metadata.

## Authoring Architecture

- Stable semantic scene names alongside numeric tattva IDs.
- A versioned JSON `SceneSpec` with source locations, validation, and repair diagnostics.
- `murali validate`, `render`, `doctor`, and `inspect` commands built on that declarative boundary.
- Tighter public module boundaries and smaller animation modules with clear ownership.
- Scene-owned themes and deliberate removal or integration of unused global state.
- Consolidated process-diagram APIs and overridable lesson templates.

## Renderer And Scale

- Order-independent transparency for intersecting translucent 3D geometry.
- Reused line buffers and bind groups, plus batched uniform uploads.
- A deliberate renderer mesh-cache policy and complete text-resource caching.
- Tiling and resource policies for large raster-backed text and code surfaces.
- Separate CPU projection and GPU upload measurements, backed by representative AI benchmarks.

## Project Sustainability

- A deliberate crates.io examples-packaging policy.
- Contribution and security policies, changelog discipline, and release automation.
- Continued synchronization between the website, API docs, examples, and release notes.

The detailed maintainers' version of this plan lives in the repository's `ROADMAP.md`.
